@@ -25,9 +25,9 @@ repositories {
 dependencies {
     compile 'commons-dbcp:commons-dbcp:1.4'
     compile 'log4j:log4j:1.2.17'
-    compile 'org.springframework:spring-beans:5.1.4.RELEASE'
-    compile 'org.springframework:spring-jdbc:5.1.4.RELEASE'
-    compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
+    compile 'org.springframework:spring-beans:5.2.0.RELEASE'
+    compile 'org.springframework:spring-jdbc:5.2.0.RELEASE'
+    compile 'postgresql:postgresql:9.1-901-1.jdbc4'
     // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
     compile group: 'org.apache.poi', name: 'poi-ooxml', version: '3.17'
     // https://mvnrepository.com/artifact/commons-collections/commons-collections
